--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../styles/main.css" />
+    <link rel="stylesheet" href="./styles/main.css" />
     <title>Projeto IBPT</title>
 </head>
 <body>
@@ -53,6 +53,6 @@
     </main>
 
     <div id="footer-placeholder"></div>
-    <script type="module" src="../js/main.js"></script>
+    <script type="module" src="./js/main.js"></script>
 </body>
 </html>
