Adicionando verificação de sessão

--- a/html/cadastro-empresa.html
+++ b/html/cadastro-empresa.html
@@ -45,6 +45,7 @@
 
     <div id="footer-placeholder"></div>
 
+    <script type="module" src="../js/sessionCheck.js"></script>
     <script type="module" src="../js/main.js"></script>
   </body>
 </html>
