--- a/html/header.html
+++ b/html/header.html
@@ -5,7 +5,7 @@
     </div>
     <ul>
       <li>
-        <a href="index.html">Home</a>
+        <a href="../index.html">Home</a>
       </li>
       <li>
         <a href="https://www.cstautomacao.com.br/" target="_blank">Serviços</a>
