--- a/html/test-api.html
+++ b/html/test-api.html
@@ -10,18 +10,19 @@
     <div id="header-placeholder"></div>
 
     <main>
-        <div class="login_options">
-            <h3>GERENCIAR EMPRESA </h3>
-        </div>
-        <div class="container">
-            <input type="text" id="api-url" placeholder="API URL">
-            <button id="test-api-button">Testar API</button>
-            <pre id="json-code"></pre>
-        </div>
+      <div class="login_options">
+        <h3>GERENCIAR EMPRESA</h3>
+      </div>
+      <div class="container">
+        <input type="text" id="api-url" placeholder="API URL" />
+        <button id="test-api-button">Testar API</button>
+        <pre id="json-code"></pre>
+      </div>
     </main>
 
     <div id="footer-placeholder"></div>
 
+    <script type="module" src="../js/sessionCheck.js"></script>
     <script type="module" src="../js/main.js"></script>
   </body>
 </html>
