--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <main class="main_index">
         <div class="add_emp">
             <h3>GERENCIAR EMPRESA </h3>
-            <a class="btn_add_emp" href="./cadastro-empresa.html"> + Adicionar Empresa</a>
+            <a class="btn_add_emp" href="./html/cadastro-empresa.html"> + Adicionar Empresa</a>
         </div>
         <div class="container_control_emp">
-          <h2>CST AUTOMACAO LTDA</h2>
+          <h2 id="nome-emp">CST AUTOMACAO LTDA</h2>
           <div class="control_emp">
             <span class="mgr-r">&#9998; Editar</span>
             <span>&#128465; Excluir</span>
@@ -53,6 +53,7 @@
     </main>
 
     <div id="footer-placeholder"></div>
+    <script type="module" src="../js/sessionCheck.js"></script>
     <script type="module" src="js/main.js"></script>
 </body>
 </html>
