--- a/html/login.html
+++ b/html/login.html
@@ -14,7 +14,7 @@
             <h3>ENTRAR</h3>
         </div>
         <div class="container_login">
-            <form class="login-form">
+            <form class="login-form" id="login-form">
                 <div class="form-group">
                     <label for="email">Email:</label>
                     <input type="email" id="email" name="email" required>
@@ -26,6 +26,7 @@
                 <button type="submit">Entrar</button>
             </form>
         </div>
+        <div id="error-message" style="color: red; margin-top: 2rem;"></div>
     </main>
 
     <div id="footer-placeholder"></div>
